获取数据整理

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,33 +1,33 @@
 {
   "intelephense.rename.exclude": ["**/vendor/**", "v1/**", "nanx_dev/**"],
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#ff6433",
+    "activityBar.activeBackground": "#53445f",
     "activityBar.activeBorder": "#945bc4",
-    "activityBar.background": "#ff6433",
-    "activityBar.foreground": "#050114",
-    "activityBar.inactiveForeground": "#05011499",
-    "editorGroup.border": "#ff6433",
-    "panel.border": "#ff6433",
-    "sash.hoverBorder": "#ff6433",
-    "sideBar.border": "#ff6433",
-    "statusBar.background": "#ff3d00",
-    "statusBar.border": "#ff3d00",
-    "statusBar.debuggingBackground": "#00c2ff",
-    "statusBar.debuggingBorder": "#00c2ff",
-    "statusBar.debuggingForeground": "#050114",
+    "activityBar.background": "#53445f",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "editorGroup.border": "#53445f",
+    "panel.border": "#53445f",
+    "sash.hoverBorder": "#53445f",
+    "sideBar.border": "#53445f",
+    "statusBar.background": "#392f41",
+    "statusBar.border": "#392f41",
+    "statusBar.debuggingBackground": "#37412f",
+    "statusBar.debuggingBorder": "#37412f",
+    "statusBar.debuggingForeground": "#e7e7e7",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#ff6433",
-    "statusBarItem.remoteBackground": "#ff3d00",
+    "statusBarItem.hoverBackground": "#53445f",
+    "statusBarItem.remoteBackground": "#392f41",
     "statusBarItem.remoteForeground": "#e7e7e7",
-    "tab.activeBorder": "#ff6433",
-    "titleBar.activeBackground": "#ff3d00",
+    "tab.activeBorder": "#53445f",
+    "titleBar.activeBackground": "#392f41",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.border": "#ff3d00",
-    "titleBar.inactiveBackground": "#ff3d0099",
+    "titleBar.border": "#392f41",
+    "titleBar.inactiveBackground": "#392f4199",
     "titleBar.inactiveForeground": "#e7e7e799",
     "commandCenter.border": "#e7e7e799"
   },
-  "peacock.color": "#ff3d00",
+  "peacock.color": "#392f41",
   "terminal.integrated.shellIntegration.enabled": true,
   "terminal.integrated.defaultProfile.osx": "zsh",
   "terminal.integrated.persistentSessionReviveProcess": "never"
