--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,26 +6,26 @@
     "activityBar.background": "#53445f",
     "activityBar.foreground": "#e7e7e7",
     "activityBar.inactiveForeground": "#e7e7e799",
-    "editorGroup.border": "#53445f",
-    "panel.border": "#53445f",
     "sash.hoverBorder": "#53445f",
-    "sideBar.border": "#53445f",
     "statusBar.background": "#392f41",
-    "statusBar.border": "#392f41",
-    "statusBar.debuggingBackground": "#37412f",
-    "statusBar.debuggingBorder": "#37412f",
-    "statusBar.debuggingForeground": "#e7e7e7",
     "statusBar.foreground": "#e7e7e7",
     "statusBarItem.hoverBackground": "#53445f",
     "statusBarItem.remoteBackground": "#392f41",
     "statusBarItem.remoteForeground": "#e7e7e7",
-    "tab.activeBorder": "#53445f",
     "titleBar.activeBackground": "#392f41",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.border": "#392f41",
     "titleBar.inactiveBackground": "#392f4199",
     "titleBar.inactiveForeground": "#e7e7e799",
-    "commandCenter.border": "#e7e7e799"
+    "commandCenter.border": "#e7e7e799",
+    "editorGroup.border": "#53445f",
+    "panel.border": "#53445f",
+    "sideBar.border": "#53445f",
+    "statusBar.border": "#392f41",
+    "statusBar.debuggingBackground": "#37412f",
+    "statusBar.debuggingBorder": "#37412f",
+    "statusBar.debuggingForeground": "#e7e7e7",
+    "tab.activeBorder": "#53445f",
+    "titleBar.border": "#392f41"
   },
   "peacock.color": "#392f41",
   "terminal.integrated.shellIntegration.enabled": true,
